Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-59817

Backfill during warmup does not respect randomized vbucket ordering

    XMLWordPrintable

Details

    • Untriaged
    • 0
    • Yes
    • KV 2023-4

    Description

      Note: This issue affects 6.6.5-MP5 and later, 6.6.5 itself is not affected.

      During warmup, when not using access.log, we load(ed) vbuckets in a randomized order, with a bias towards active vbuckets. This is to prevent loading a run of all replica or all active vbuckets before reaching the low watermark.

      When we switched to a pause-resume task for this (MB-47267 warmup.cc L410), we inadvertently switched to loading vbuckets by increasing vbid, using the randomized ordering only to decide whether to load a vbucket or not. Hence we can end up with a heavily skewed distribution of active vs. replica items in the hashtable.

      As part of this ticket, we've decided to stop doing the randomized bucket ordering in the first place. We now always prioritise active data over replica data. This prevents having a low resident ratio of active and high resident ratio of replica items.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ashwin.govindarajulu Ashwin Govindarajulu
            pavlos.georgiou Pavlos Georgiou
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              PagerDuty