[BP] MB-59817 [1/2]: Warmup vbuckets in the order specified

KVBucket::pauseResumeVisit previously only allowed visiting vbuckets
in increasing vbid order, which could cause warmup to load few active
vbuckets.

Change-Id: I6b6a6c09b0f2ef15b60bd5da5c7281140623fb0a
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/201849
Well-Formed: Restriction Checker
Tested-by: Pavlos Georgiou <pavlos.georgiou@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>